2017-02-08 Samuel Calvet <scalvet@cern.ch>
	* bug fix in branch definitions
	
2017-02-03  Sanmay Ganguly <sanmay.ganguly@cern.ch>
	* Combined the resolved and boosted channel for muon rates
	* TopNtupleAnalysis-00-02-27

2016-01-12 Noam Tal Hod <hod@cern.ch>
	* major update for the 2HDM signals
	* TopNtupleAnalysis-00-02-26

2016-12-16 Hannah Carson
	* Analyses for boosted W+jets SF
	
2016-11-19 Sanmay Ganguly <sanmay.ganguly@cern.ch>
	* Added the rates for AnalysisTop-2.4.21 with full 2016 luminosity
	* TopNtupleAnalysis-00-02-25

2016-11-15 Sanmay Ganguly <sanmay.ganguly@cern.ch>
	* Added the rates for AnalysisTop-2.4.21

2016-11-05 Sanmay Ganguly <sanmay.ganguly@cern.ch>
	* Added boundary in muon channel dr > 0.4 fake rate to stop at 100
	GeV.
	* TopNtupleAnalysis-00-02-24

2016-11-04 Sanmay Ganguly <sanmay.ganguly@cern.ch>
	* Update rates for muon channel
	* The real rate parametrization is changed to lepPt-topoetcone
	* TopNtupleAnalysis-00-02-23

2016-10-07 Sanmay Ganguly <sanmay.ganguly@cern.ch>
	* Update rates for muon channel 
	* TopNtupleAnalysis-00-02-22

2016-09-09 Noam Tal Hod <hod@cern.ch>
	* fixed a few bugs and added a few features to the 2HDM setup
	* TopNtupleAnalysis-00-02-21

2016-09-09 Samuel Calvet <scalvet@cern.ch>
	* Remove warnings in Root/EFTLib.cxx
	* Remove warnings in MG's code

2016-08-31 Noam Tal Hod <hod@cern.ch>
	* Added reclassification feature in case of event with extra ME
	b-quarks - these topologies have one set of libs in the SM case givne
	that the SM model used assumes m(b)=0, while in the H/A case there is
	another set of libs which take into account the b mass
	* TopNtupleAnalysis-00-02-20

2016-08-31 Noam Tal Hod <hod@cern.ch>
	* Added the weight functionality. Not all subprocesses are supported
	yet. Will add all later. Have a look at getTopology(...),
	get2HDMWeight(...) and the associated methods for details.
	* TopNtupleAnalysis-00-02-19

2016-08-30 Noam Tal Hod <hod@cern.ch>